--- a/src/app/dark-mode/dark-mode.component.scss
+++ b/src/app/dark-mode/dark-mode.component.scss
@@ -1,14 +1,15 @@
-* {
-    font-family: "Roboto", sans-serif;
-    color: #8b8d8f;
-  }
-  
-  .body {
-    background: black;
-    height: 100vh;
-    width: 100vw;
-  }
-  
+  * {
+      font-family: "Roboto", sans-serif;
+      color: #8b8d8f;
+    }
+
+    .body {
+      background: black;
+      height: 100vh;
+      width: 100vw;
+    }
+
+  /* Styling for main player */
   .player {
     height: 600px;
     width: 320px;
@@ -21,166 +22,356 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    z-index: 1;
   }
-  
+
+  /* Styling for expandable player list */
+  .player-list {
+    height: 600px;
+    width: 0;
+    border-radius: 0px 40px 40px 0px;
+    background: linear-gradient(to bottom, #33383e 0%, #17191d 100%);
+    display: block;
+    border: solid 2px #3e434c;
+    position: absolute;
+    top: 50%;
+    left: calc(50% + 125px); /* Start at the right border of player */
+    transform: translateY(-50%);
+    transition: width 0.5s ease;
+    overflow: hidden;
+    z-index: 0; /* Ensure it is behind the player */
+  }
+
+  .player-list.open {
+    width: 320px;
+  }
+
+  .song-info{
+    font-size: 12px;
+    padding-left: 70px;
+    padding-bottom: .25rem;
+    padding-top: .25rem;
+    cursor: pointer;
+
+    &:hover{
+      color: white;
+      background-color: orangered;
+    }
+  }
+
+
   .top {
-    display: flex;
-    justify-content: space-between;
-    padding: 30px;
+      display: flex;
+      justify-content: space-between;
+      padding: 30px;
+    }
+
+    .indicator {
+      font-size: 10px;
+    }
+    .small,
+    .big,
+    .big_play_pause {
+      border-radius: 50%;
+      height: 40px;
+      width: 40px;
+      background: radial-gradient(at bottom right, #292e35 0%, #292e34 80%);
+      border: none;
+      box-shadow: -7px -6px 10px 5px rgba(255, 255, 255, 0.04),
+        6px 6px 10px 5px rgb(39, 42, 47);
+      padding: 0;
+    }
+
+    .big,
+    .big_play_pause {
+      height: 60px;
+      width: 60px;
+      box-shadow: -7px -6px 10px 5px rgba(255, 255, 255, 0.04),
+        7px 6px 10px 2px rgb(14, 15, 16);
+      background: radial-gradient(at bottom right, #17191e 0%, #1d2025 80%);
+    }
+
+    .big_play_pause {
+      background: radial-gradient(at top left, #c92711 0%, #ea570a 80%);
+    }
+    .inner_button,
+    .center,
+    .inner_button_big,
+    .playpause {
+      border-radius: 50%;
+      height: 35px;
+      width: 35px;
+      background: radial-gradient(
+        at top left,
+        rgba(46, 50, 58, 1) 0%,
+        rgba(28, 30, 35, 1) 80%
+      );
+      margin: 0 auto;
+      border: none;
+      display: flex;
+      justify-content: center;
+      vertical-align: middle;
+      /* align-self: center; */
+      align-items: center;
+    }
+
+    .inner_button_big {
+      height: 55px;
+      width: 55px;
+      background: radial-gradient(
+        at top left,
+        rgb(57, 59, 64) 0%,
+        rgb(12, 13, 16) 112%
+      );
+    }
+
+    .playpause {
+      background: radial-gradient(at bottom right, #c92711 0%, #ea570a 80%);
+      height: 55px;
+      width: 55px;
+    }
+
+    .small:active {
+      transform: translateY(2px);
+      background: radial-gradient(at top left, #292e35 0%, #292e34 80%);
+    }
+    .inner_button:active {
+      background: radial-gradient(
+        at bottom right,
+        rgba(46, 50, 58, 1) 0%,
+        rgba(28, 30, 35, 1) 80%
+      );
+    }
+    .big_play_pause:active {
+      transform: translateY(4px);
+      background: radial-gradient(at bottom right, #c92711 0%, #ea570a 80%);
+    }
+    .playpause:active {
+      background: radial-gradient(at top left, #c92711 0%, #ea570a 80%);
+    }
+
+    .big:active {
+      transform: translateY(4px);
+      background: radial-gradient(at top left, #17191e 0%, #1d2025 80%);
+    }
+    .inner_button_big:active {
+      background: radial-gradient(
+        at bottom right,
+        rgb(57, 59, 64) 0%,
+        rgb(12, 13, 16) 112%
+      );
+    }
+
+    .center {
+      height: 220px;
+      width: 220px;
+      box-shadow: -15px -10px 16px 5px rgba(255, 255, 255, 0.04),
+        10px 10px 16px 8px rgb(24, 26, 29);
+      background: radial-gradient(at top left, rgba(28, 30, 35, 1) 0%, #131416 85%);
+    }
+
+    .album {
+      border-radius: 50%;
+      height: 205px;
+      width: 205px;
+      object-fit: cover;
+    }
+
+    .song_details {
+      text-align: center;
+      margin-top: 40px;
+      margin-bottom: 1rem;
+    }
+
+    .song_details_div2{
+      margin-top: 7px;font-size: 10px;
+    }
+
+    .controls {
+      display: flex;
+      justify-content: space-around;
+      margin: 30px 30px 0px 30px;
+    }
+
+    .slider {
+      margin: 20px auto;
+      width: 70%;
+    }
+
+    .slider_bar {
+      background: black;
+      height: 6px;
+
+      border-radius: 5px;
+      margin: 0 auto;
+      box-shadow: inset -2px -2px 2px 0px rgb(66, 70, 74),
+        inset 1px 1px 1px -1px rgb(0, 0, 0);
+    }
+
+    .inner_slider_bar {
+      width: 60%;
+      height: 4px;
+      background: radial-gradient(at top left, #c92711 0%, #ffc107 90%);
+      margin: 0px 1px;
+      border-radius: 5px;
+    }
+    .time {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-size: 7px;
+      margin-bottom: 5px;
+    }
+    .description{
+      line-height : 1.5;
+      margin : 20px
+    }
+
+
+
+  @-webkit-keyframes rotating {
+    from{
+      -webkit-transform: rotate(0deg);
+    }
+    to{
+      -webkit-transform: rotate(360deg);
+    }
   }
-  
-  .indicator {
-    font-size: 10px;
+
+  .rotating {
+    -webkit-animation: rotating 45s linear infinite;
   }
-  .small,
-  .big,
-  .big_play_pause {
-    border-radius: 50%;
-    height: 40px;
+
+
+  #slider.slider-vertical {
     width: 40px;
-    background: radial-gradient(at bottom right, #292e35 0%, #292e34 80%);
-    border: none;
-    box-shadow: -7px -6px 10px 5px rgba(255, 255, 255, 0.04),
-      6px 6px 10px 5px rgb(39, 42, 47);
-    padding: 0;
+    height: 500px;
+    border-radius: 15px;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    background: rgb(193,7,7);
+    background: linear-gradient(90deg, rgba(193,7,7,1) 0%, rgba(241,109,52,1) 100%);
+    position: absolute;
+    top: 50%;
+    left: -7%;
+    transform: translate(-50%, -50%);
+
+    &:after {
+      content: '';
+      position: absolute;
+      z-index: 0;
+      top: 50%;
+      left: 50%;
+      width: 10px;
+      height: 450px;
+      transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      border-radius: 5px;
+      background: rgb(50,23,19);
+      background: linear-gradient(180deg, rgba(50,23,19,1) 0%, rgba(36,16,8,1) 55%, rgba(20,6,0,1) 100%);
+    }
+
+    .knob {
+      position: absolute;
+      z-index: 1;
+      top: 0; // Changed from 440px to 0 for initial position at top
+      margin: 4px 3px;
+      width: 34px;
+      height: 34px;
+      cursor: pointer;
+      border-radius: 17px;
+      background: rgb(223,210,208);
+      background: linear-gradient(135deg, rgba(223,210,208,1) 0%, rgba(230,212,205,1) 55%, rgba(48,27,18,1) 100%);
+      box-shadow: 10px 10px 15px rgba(0, 0, 0, .8);
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 8px;
+        left: -29px;
+        width: 0;
+        height: 0;
+        border-top: 8px solid transparent;
+        border-left: 8px solid rgba(0, 0, 0, 0.5);
+        border-bottom: 8px solid transparent;
+        opacity: 1;
+        transition: opacity 1s ease;
+      }
+
+      &:after {
+        content: 'Slide me';
+        position: absolute;
+        top: 0;
+        left: -100px;
+        padding: 8px;
+        color: white;
+        text-align: right;
+        border-radius: 5px;
+        background-color: rgba(0, 0, 0, 0.5);
+        opacity: 1;
+        transition: opacity 1s ease;
+      }
+
+      &.active {
+        &:before,
+        &:after {
+          opacity: 0;
+        }
+      }
+    }
   }
-  
-  .big,
-  .big_play_pause {
-    height: 60px;
-    width: 60px;
-    box-shadow: -7px -6px 10px 5px rgba(255, 255, 255, 0.04),
-      7px 6px 10px 2px rgb(14, 15, 16);
-    background: radial-gradient(at bottom right, #17191e 0%, #1d2025 80%);
-  }
-  
-  .big_play_pause {
-    background: radial-gradient(at top left, #c92711 0%, #ea570a 80%);
-  }
-  .inner_button,
-  .center,
-  .inner_button_big,
-  .playpause {
-    border-radius: 50%;
-    height: 35px;
-    width: 35px;
-    background: radial-gradient(
-      at top left,
-      rgba(46, 50, 58, 1) 0%,
-      rgba(28, 30, 35, 1) 80%
-    );
-    margin: 0 auto;
-    border: none;
-    display: flex;
-    justify-content: center;
-    vertical-align: middle;
-    /* align-self: center; */
-    align-items: center;
-  }
-  
-  .inner_button_big {
-    height: 55px;
-    width: 55px;
-    background: radial-gradient(
-      at top left,
-      rgb(57, 59, 64) 0%,
-      rgb(12, 13, 16) 112%
-    );
-  }
-  
-  .playpause {
-    background: radial-gradient(at bottom right, #c92711 0%, #ea570a 80%);
-    height: 55px;
-    width: 55px;
-  }
-  
-  .small:active {
-    transform: translateY(2px);
-    background: radial-gradient(at top left, #292e35 0%, #292e34 80%);
-  }
-  .inner_button:active {
-    background: radial-gradient(
-      at bottom right,
-      rgba(46, 50, 58, 1) 0%,
-      rgba(28, 30, 35, 1) 80%
-    );
-  }
-  .big_play_pause:active {
-    transform: translateY(4px);
-    background: radial-gradient(at bottom right, #c92711 0%, #ea570a 80%);
-  }
-  .playpause:active {
-    background: radial-gradient(at top left, #c92711 0%, #ea570a 80%);
-  }
-  
-  .big:active {
-    transform: translateY(4px);
-    background: radial-gradient(at top left, #17191e 0%, #1d2025 80%);
-  }
-  .inner_button_big:active {
-    background: radial-gradient(
-      at bottom right,
-      rgb(57, 59, 64) 0%,
-      rgb(12, 13, 16) 112%
-    );
-  }
-  
-  .center {
-    height: 220px;
-    width: 220px;
-    box-shadow: -15px -10px 16px 5px rgba(255, 255, 255, 0.04),
-      10px 10px 16px 8px rgb(24, 26, 29);
-    background: radial-gradient(at top left, rgba(28, 30, 35, 1) 0%, #131416 85%);
-  }
-  
-  .album {
-    border-radius: 50%;
-    height: 205px;
-    width: 205px;
-    object-fit: cover;
-  }
-  
-  .song_details {
-    text-align: center;
-    margin-top: 40px;
-  }
-  
-  .controls {
-    display: flex;
-    justify-content: space-around;
-    margin: 30px 30px 0px 30px;
-  }
-  
-  .slider {
-    margin: 20px auto;
-    width: 70%;
-  }
-  
-  .slider_bar {
-    background: black;
-    height: 6px;
-  
-    border-radius: 5px;
-    margin: 0 auto;
-    box-shadow: inset -2px -2px 2px 0px rgb(66, 70, 74),
-      inset 1px 1px 1px -1px rgb(0, 0, 0);
-  }
-  
-  .inner_slider_bar {
-    width: 60%;
-    height: 4px;
-    background: radial-gradient(at top left, #c92711 0%, #ffc107 90%);
-    margin: 0px 1px;
-    border-radius: 5px;
-  }
-  .time {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 7px;
-    margin-bottom: 5px;
-  }
-  .description{
-    line-height : 1.5;
-    margin : 20px
+
+
+
+
+
+
+
+  @media (max-width: 500px) {
+    .body{
+      height: 100vh;
+      width: 100vw;
+      overflow: hidden;
+      background-color:  #17191d;
+    }
+
+    .player {
+      width: 270px;
+    }
+
+    .player-list {
+      height: 0;
+      width: 270px;
+      border-radius: 0px 0px 40px 40px;
+      background: linear-gradient(to bottom, #33383e 0%, #17191d 100%);
+      display: block;
+      border: solid 2px #3e434c;
+      position: absolute;
+      top: calc(50% + 250px); /* Start at the bottom border of player */
+      left: 50%;
+      transform: translate(-50%, -50%);
+      transition: height 0.5s ease;
+      overflow: hidden;
+      z-index: 0; /* Ensure it is behind the player */
+      //margin-top:25%
+    }
+
+    .player-list.open {
+      height: 400px;
+      width: 270px;
+      overflow-y: scroll;
+    }
+    .song_details {
+      text-align: center;
+      padding-top: 40px;
+      margin-bottom: 1rem;
+    }
+
+    .song_details_div2{
+      margin-top: 50%;font-size: 10px;
+    }
+    #slider.slider-vertical{
+      display: none;
+    }
+
   }
